# git-overleaf-cli

./: CMakeLists.txt  Makefile  README.md  clang-format-all.sh
.github/badges/: coverage.json
.github/workflows/: ci.yml
cmake/: RemoveCoverageData.cmake  VendoredDeps.cmake
include/: git-overleaf-cli.h
src/: firefox.c  fs.c  git.c  http.c  main.c  overleaf.c  process.c  projects.c  util.c
tests/: CMakeLists.txt  test_cli.cc  test_firefox.cc  test_fs.cc  test_git.cc  test_helpers.cc  test_helpers.h  test_http.cc  test_overleaf.cc  test_process.cc  test_projects.cc  test_util.cc
